Add README and Fix Name website

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="th">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cpechat</title>
+    <meta name="description" content="Chat CPE - AI Assistant for KMUTT Students" />
+    <meta name="keywords" content="chatbot, AI, KMUTT, CPE" />
+    <meta name="theme-color" content="#6277ac" />
+    <title>ChatCPE</title>
+    <link rel="icon" type="image/svg+xml" href="/images/LogoCPE.png" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-  </html>
+</html>
