--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,12 @@
 <html lang="th">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="description" content="Chat CPE - AI Assistant for KMUTT Students" />
     <meta name="keywords" content="chatbot, AI, KMUTT, CPE" />
     <meta name="theme-color" content="#6277ac" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>ChatCPE</title>
     <link rel="icon" type="image/svg+xml" href="/images/LogoCPE.png" />
   </head>
